# egc

./: CMakeLists.txt  EGC_Lab3.cpp  Validator.h  auxiliary.h  bresenham.cpp  bresenham.h  camera.h  clip.cpp  clip.h  main.cpp  mat3.cpp  mat3.h  mat4.cpp  mat4.h  projection.cpp  projection.h  rasterization.cpp  rasterization.h  rasterization.lib  stdafx.cpp  testMatrix.cpp  testMatrix.h  testTransform.cpp  testTransform.h  testVector.cpp  testVector.h  tiny_obj_loader.h  transform.cpp  transform.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  zbuffer.cpp  zbuffer.h
