cmake_minimum_required(VERSION 3.15)
project(ECG)

set(CMAKE_CXX_STANDARD 11)

file(GLOB ECG_SRC
        "*.h"
        "*.cpp"
        )

add_executable(ECG ${ECG_SRC})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})